Fixing On-Demand

--- a/OneDriveLib/OneDriveLib.csproj
+++ b/OneDriveLib/OneDriveLib.csproj
@@ -58,6 +58,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="UacHelper.cs" />
+    <Compile Include="WriteLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
