--- a/OneDriveLib/OneDriveLib.csproj
+++ b/OneDriveLib/OneDriveLib.csproj
@@ -74,6 +74,10 @@
     <None Include="Resources\ODNative32.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /y $(TargetPath) $(SolutionDir)\Binaries\PowerShell\
+copy /y $(TargetDir)$(TargetName).pdb $(SolutionDir)\Binaries\PowerShell\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
