--- a/ODNative/ODNative.vcxproj
+++ b/ODNative/ODNative.vcxproj
@@ -216,6 +216,9 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\Resources\ODNative.dll
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Binaries\PowerShell\Readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
