--- a/ODNative/ODNative.vcxproj.filters
+++ b/ODNative/ODNative.vcxproj.filters
@@ -36,4 +36,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Binaries\PowerShell\Readme.md" />
+  </ItemGroup>
 </Project>
