--- a/ODNative/ODNative.vcxproj
+++ b/ODNative/ODNative.vcxproj
@@ -217,7 +217,7 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\Resources\ODNative.dll
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Binaries\PowerShell\Readme.md" />
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
