--- a/ODOnDemand/ODOnDemand.vcxproj.filters
+++ b/ODOnDemand/ODOnDemand.vcxproj.filters
@@ -32,8 +32,16 @@
     <ClInclude Include="EventCallBacks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ODOnDemand.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
