--- a/ODOnDemand/ODOnDemand.rc
+++ b/ODOnDemand/ODOnDemand.rc
@@ -51,8 +51,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION 1,0,1,1
+ PRODUCTVERSION 1,0,1,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -69,12 +69,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Rodney Viana"
             VALUE "FileDescription", "Monitor OneDrive Notification Information"
-            VALUE "FileVersion", "1.0.0.1"
+            VALUE "FileVersion", "1.0.1.1"
             VALUE "InternalName", "ODOnDemand.exe"
-            VALUE "LegalCopyright", "Copyright (C) 2020 Rodney Viana"
+            VALUE "LegalCopyright", "Copyright (C) 2019-2021 Rodney Viana"
             VALUE "OriginalFilename", "ODOnDemand.exe"
             VALUE "ProductName", "OneDrive On Demand Notification Monitor"
-            VALUE "ProductVersion", "1.0.0.1"
+            VALUE "ProductVersion", "1.0.1.1"
         END
     END
     BLOCK "VarFileInfo"
