--- a/ODNative/ODNative.vcxproj
+++ b/ODNative/ODNative.vcxproj
@@ -95,6 +95,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>RuntimeObject.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy /y $(TargetDir)*.* $(SolutionDir)Binaries\
@@ -118,6 +119,7 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\resources\ODNative32.dll</Comma
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>RuntimeObject.lib;</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy /y $(TargetDir)*.* $(SolutionDir)Binaries\
@@ -146,6 +148,7 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\Resources\ODNative.dll
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>RuntimeObject.lib;</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy /y $(TargetDir)*.* $(SolutionDir)Binaries\
@@ -173,6 +176,7 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\resources\ODNative32.dll</Comma
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>RuntimeObject.lib;</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>echo copy /y $(TargetDir)*.* $(SolutionDir)Binaries\
@@ -190,10 +194,12 @@ copy /y $(TargetPath) $(SolutionDir)\OneDriveLib\Resources\ODNative.dll
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ApiStatus.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ApiStatus.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
